fix: bug affecting blank out-of-body space in on mobile fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=GFS+Neohellenic:ital,wght@0,400;0,700;1,400;1,700&family=Vast+Shadow&display=swap');
 
 * {
-    margin: 0;
     padding: 0;
     border: 0;
+    margin: 0;
+}
+
+html {
+    min-height: 100%;
+}
+
+html, body {
+    overflow-x: hidden;
 }
 
 /*----------------------------------------Colours */
 
 
-body {
+#main {
     background: linear-gradient(
         45deg, 
         #999 5%,
@@ -55,6 +63,7 @@ h1 {
     margin-left: 10px;
     margin-right: 10px;
     width: 25%;
+    height: 75px;
 }
 
 .navbutton {
@@ -78,15 +87,13 @@ h1 {
         #e5da93 80%,
         #e2c402 95%
     );
-}
-
-.navbutton a {
-    display: grid;
-    align-items: center;
     text-decoration: none;
     width: 100%;
     height: 100%;
+    
 }
+
+
 
 /* Following code taken from hover.css */
 .hvr-sweep-to-right {
@@ -177,4 +184,6 @@ h1 {
     padding-top: 20px;
     padding-left: 10%;
     height: 75px;
+    margin-bottom: 20px;
+    padding-bottom: 20px;
 }
